@@ -23,6 +23,7 @@ Other:
  • Added lups thrusters to armatlas/corvalk/banshee
  • Game info screen: grouped chicken modoptions, and hiding them when chickens disabled
  • Renamed modoptions: removed 'mo_' prefix and change for chickens to 'chicken_'
+ • Added the "Traitor" award = destroying allied units.
 
 Fixes:
  • Options widget remembers/restores some spring config settings (switching engines lately made config be reset)
